Fixed printMethodTwo not clearing/button-row alignment

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ button:hover {
 }
 .button-row {
     display: inline-block;
-    margin-left: 1.8vw;
+    margin-left: 2vw;
 }
 .output-wrapper {
     border-bottom: 2px solid #8c8c8c;
